공룡게임 html파일 추가

--- a/Pages/dinosaur.html
+++ b/Pages/dinosaur.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
   <head>
     <title>공룡 점프!</title>
     <link rel="stylesheet" type="text/css" href="../Css/dinosaur.css" />
@@ -14,25 +13,14 @@
         <button id="reset-button">재시작</button>
       </div>
     </div>
+    <div id ="spacebar">
+      <h2>PRESS YOUR SPACE BAR</h2>
+    </div>
+    <div id="score-container">
+      <h2>S c o r e</h2>
+      <ul id="score-list-container"></ul>
+    </div>
 
     <script src="../Js/dinosaur.js"></script>
   </body>
-=======
-<head>
-  <title>공룡 점프!</title>
-  <link rel="stylesheet" type="text/css" href="../Css/dinasour.css">
-</head>
-<body>
-  <div id="game-container">
-    <div id="player"></div>
-    <div id="obstacle-container"></div>
-    <div id="game-over-container">
-      <h2 id="game-over-message"></h2>
-      <button id="reset-button">재시작</button>
-    </div>
-  </div>
-
-  <script src="../Js/dinosaur.js"></script>
-</body>
->>>>>>> main
 </html>
