mypage ui without local storage data

--- a/Pages/mypage.html
+++ b/Pages/mypage.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../Css/mypage.css" rel="stylesheet" />
+    <script defer src="../Js/mypage.js"></script>
     <title>Document</title>
   </head>
   <body>
-    This is my page..
+    <div class="mypage">
+      <div class="main">
+        <img src="../Assets/mypage/pixel-speech-bubble.gif" />
+        <div class="myprofile">
+          <div class="textBox">
+            <div class="profiles">
+              <img class="userIcon" src="../Assets/mypage/users (1).png" />
+              <div class="names">
+                <p>NAME : Test User</p>
+                <p>ID : hanghae99_15</p>
+              </div>
+            </div>
+
+            <hr />
+            <div class="scores">
+              <p class="scoresTitle">[Best Scores]</p>
+              <p>1. BLOCK GAME : <span id="blockScore"></span></p>
+              <p>2. DINOSAUR GAME : <span id="dinosaurScore"></span></p>
+              <p>3. TYPING GAME : <span id="typingScore"></span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
