responsive web and ranking system but no login

--- a/index.html
+++ b/index.html
@@ -27,19 +27,30 @@
         </div>
         <div class="move-title"><a href="#">"console.log(game)"</a></div>
       </div>
-      <p class="welcomeText">Welcome, Username!</p>
+
       <div class="game-bg">
         <div class="game_row">
-          <a class="game1" href="Pages/dinosaur.html"> </a>
+          <p>Welcome User, Select the game!</p>
+          <a class="more" href="https://github.com/Mini-game-Project/JS-games">
+          </a>
         </div>
         <div class="game_row">
-          <a class="game2" href="Pages/typing.html"> </a>
+          <a class="game1" href="Pages/dinosaur.html">
+            <p>[Dinosaur]</p>
+          </a>
+        </div>
+        <div class="game_row">
+          <a class="game2" href="Pages/typing.html">
+            <p>[Typing]</p>
+          </a>
           <a class="mypageIcon" href="Pages/mypage.html">
             <div class="mypage">
               <p>Lv17. Username</p>
             </div>
           </a>
-          <a class="game3" href="Pages/blockgame.html"></a>
+          <a class="game3" href="Pages/blockgame.html">
+            <p>[Block]</p>
+          </a>
         </div>
       </div>
     </div>
